# baby-safety-cam-ai

./: .env.example  .gitignore  BLUEPRINT.md  PRD.md  README.md  baby_monitor.db-shm  baby_monitor.db-wal  deploy_prod.sh  main.py  pyproject.toml  test_video_analysis.py
docs/: index.html
plan/: tmp-turnoff.md
scripts/: run-tunnel.sh  setup-tunnel.sh
src/: main.py
src/alert/: discord.py  manager.py
src/audio/: analyzer.py
src/db/: database.py
src/pipeline/: processor.py
src/streaming/: camera.py
src/utils/: config.py
src/vision/: analyzer.py  motion.py  schemas.py
static/css/: style.css
static/js/: app.js
templates/: admin.html  index.html
